@@ -144,7 +144,7 @@ int OCSP_basic_verify(OCSP_BASICRESP *bs, STACK_OF(X509) *certs,
 
 	end:
 	if(chain) sk_X509_pop_free(chain, X509_free);
-	return 1;
+	return ret;
 	}
 
 
